fixed circle error on mobile

--- a/ellingson/sample.css
+++ b/ellingson/sample.css
@@ -258,6 +258,7 @@ form {
 td {
 	width: 50%;
 	padding: 5%;
+	display: inline-grid;
 }
 }
 
